# mcu-simulator

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
build_audit/: CMakeCache.txt
demo/: blinky.cpp  sensor_demo.cpp
peripherals/: can.cpp  can.h  i2c.cpp  i2c.h  peripheral.h  spi.cpp  spi.h  uart.cpp  uart.h
programs/: factorial.s
rtos/: event_group.h  mutex.h  queue.h  scheduler.cpp  scheduler.h  semaphore.h
src/: cpu.cpp  cpu.h  loader.cpp  loader.h  main.cpp  memory.cpp  memory.h  parallel_sim.h  trace.h
tests/: test_cpu.cpp  test_loader.cpp  test_memory.cpp  test_parallel_sim.cpp  test_peripherals.cpp  test_rtos.cpp
